# Epitech_Zappy

./: .fuse_hidden00001b1d00000022  .gitignore  CMakeLists.txt  Makefile  README.md  test.sh  zappy_ai
Ress/hud/: font.xml
Ress/model/BattleCursor/: SelectMonster.dae  SelectMonster.fbx  SelectMonster.smd
Ress/model/JDJak/: jak.mtl
Ress/model/perso/: idle.dae  left strafe.dae  perso.DAE  right strafe.dae  right turn.dae
src/ai/: Makefile  ai.py  commands.py  init.py  main.c  main.py  manager.py  network.py  test.py  utils.py
src/ai/c/: main.c
src/ai/parsing/: get_infos.c  parsing.h
src/client/: Makefile  main.c  main.cpp
src/client/Display/: IDisplay.hpp  IrrlichtDisplay.cpp  IrrlichtDisplay.hpp  IrrlichtDisplayPlayer.cpp  MyEventReceiver.hpp  OldIrrlichtDisplay.cpp  OldIrrlichtDisplay.hpp
src/client/Hud/: Button.cpp  Button.hpp  ButtonManager.cpp  ButtonManager.hpp  CheckBox.cpp  CheckBox.hpp  CheckBoxManager.cpp  CheckBoxManager.hpp  EID.hpp  EditBox.cpp  EditBox.hpp  GUI.cpp  GUI.hpp  Image.cpp  Image.hpp  ImageManager.cpp  ImageManager.hpp  ListBox.cpp  ListBox.hpp  Menu.cpp  Menu.hpp  Rectangle.cpp  Rectangle.hpp  ScrollBar.cpp  ScrollBar.hpp  ServPanel.cpp  ServPanel.hpp  (+16 more)
src/server/: Makefile  c_modular.c  c_modular.h  data.h  list.c  list.h  list_iterator.c  list_iterator.h  main.c  map.c  map.h  point.h
test_lib3D/: CMakeLists.txt  IrrlichtDisplay.cpp  IrrlichtDisplay.hpp  test_zappy.cpp  test_zappy.hpp
test_lib3D/model/Daxter/DaxterPants/: Daxterpants.mtl
test_lib3D/model/Egg/: Yoshi Egg.mtl
test_lib3D/model/perso/: jump.dae  left strafe walk.dae  left turn.dae  perso.dae  right strafe walk.dae  running.dae  walking.dae
(+247 files in other folders)
